tests/dupe-var-fn/out.txt
error: duplicate value: x
  ┌─ err.sml:1:16
  │
1 │ val _ = fn (x, x) => 3
  │                ^

typechecking failed
